force-app/main/default/objects/BusinessLicenseApplication/fields/Acknowledgement_Consent__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgement Consent</label>
    <type>Checkbox</type>
</CustomField>