force-app/main/default/objects/BusinessLicenseApplication/fields/Acknowledgement_Name__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Name__c</fullName>
    <label>Acknowledgement Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>