force-app/main/default/objects/BusinessLicenseApplication/fields/Agent_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Signature_Date__c</fullName>
    <label>Agent Signature Date</label>
    <type>Date</type>
</CustomField>