force-app/main/default/objects/BusinessLicenseApplication/fields/Agent_Signature_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Signature_Name__c</fullName>
    <label>Agent Signature Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>