force-app/main/default/objects/BusinessLicenseApplication/fields/Applicant_Applied_as__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Applied_as__c</fullName>
    <label>Applicant Applied as</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Profit ABS</fullName>
            </value>
            <value>
                <fullName>Equity ABS</fullName>
            </value>
            <value>
                <fullName>Regular ABS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>