force-app/main/default/objects/BusinessLicenseApplication/fields/Applicant_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Mailing_Address__c</fullName>
    <label>Applicant Mailing Address</label>
    <type>Address</type>
</CustomField>