force-app/main/default/objects/BusinessLicenseApplication/fields/Applicant_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Middle_Name__c</fullName>
    <label>Applicant Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>