force-app/main/default/objects/BusinessLicenseApplication/fields/Applicant_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Signature_Date__c</fullName>
    <label>Applicant Signature Date</label>
    <type>Date</type>
</CustomField>