force-app/main/default/objects/BusinessLicenseApplication/fields/Applicant_SSN__c.field-meta.xml
<CustomField>
    <fullName>Applicant_SSN__c</fullName>
    <label>Applicant Social Security Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>