force-app/main/default/objects/BusinessLicenseApplication/fields/Applicant_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Telephone__c</fullName>
    <label>Applicant Telephone</label>
    <type>Phone</type>
</CustomField>