force-app/main/default/objects/BusinessLicenseApplication/fields/Application_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Sub_Type__c</fullName>
    <label>Application Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Application</fullName>
            </value>
            <value>
                <fullName>Renewal Application</fullName>
            </value>
            <value>
                <fullName>Initial Appointment of Compliance Lawyer</fullName>
            </value>
            <value>
                <fullName>Initial Appointment of Designated Principal</fullName>
            </value>
            <value>
                <fullName>Change of Compliance Lawyer</fullName>
            </value>
            <value>
                <fullName>Change of Designated Principal</fullName>
            </value>
            <value>
                <fullName>Renewal of Compliance Lawyer</fullName>
            </value>
            <value>
                <fullName>Renewal of Designated Principal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>