force-app/main/default/objects/BusinessLicenseApplication/fields/ArizonaDisciplinaryHistory__c.field-meta.xml
<CustomField>
    <fullName>ArizonaDisciplinaryHistory__c</fullName>
    <label>Arizona Disciplinary History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>