force-app/main/default/objects/BusinessLicenseApplication/fields/Authorization_Release_Consent__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Release_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorization and Release Consent</label>
    <type>Checkbox</type>
</CustomField>