force-app/main/default/objects/BusinessLicenseApplication/fields/AZCC_AZSS_Number__c.field-meta.xml
<CustomField>
    <fullName>AZCC_AZSS_Number__c</fullName>
    <inlineHelpText>Arizona Corporation Commission Number / Arizona Secretary of State Number</inlineHelpText>
    <label>AZCC or AZSS Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>