force-app/main/default/objects/BusinessLicenseApplication/fields/AZProfessionalConductCompliance__c.field-meta.xml
<CustomField>
    <fullName>AZProfessionalConductCompliance__c</fullName>
    <label>AZProfessional Conduct Compliance</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>