force-app/main/default/objects/BusinessLicenseApplication/fields/AZRegistrationStatus__c.field-meta.xml
<CustomField>
    <fullName>AZRegistrationStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AZ Registration Status</label>
    <type>Checkbox</type>
</CustomField>