force-app/main/default/objects/BusinessLicenseApplication/fields/BarLicenseNumbers__c.field-meta.xml
<CustomField>
    <fullName>BarLicenseNumbers__c</fullName>
    <label>Bar License Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>