force-app/main/default/objects/BusinessLicenseApplication/fields/Business_Fax__c.field-meta.xml
<CustomField>
    <fullName>Business_Fax__c</fullName>
    <label>Fax Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>