force-app/main/default/objects/BusinessLicenseApplication/fields/Business_License_Application__c.field-meta.xml
<CustomField>
    <fullName>Business_License_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ABS Application</label>
    <referenceTo>BusinessLicenseApplication</referenceTo>
    <relationshipLabel>Business License Applications</relationshipLabel>
    <relationshipName>Business_License_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>