force-app/main/default/objects/BusinessLicenseApplication/fields/Business_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Mailing_Address__c</fullName>
    <label>Business Mailing Address</label>
    <type>Address</type>
</CustomField>