force-app/main/default/objects/BusinessLicenseApplication/fields/Business_Organization__c.field-meta.xml
<CustomField>
    <fullName>Business_Organization__c</fullName>
    <label>Business Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Limited Liability Co.</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>