force-app/main/default/objects/BusinessLicenseApplication/fields/Business_Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Physical_Address__c</fullName>
    <label>Business Physical Address</label>
    <type>Address</type>
</CustomField>