force-app/main/default/objects/BusinessLicenseApplication/fields/Business_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Business_Telephone__c</fullName>
    <label>Business Telephone</label>
    <type>Phone</type>
</CustomField>