force-app/main/default/objects/BusinessLicenseApplication/fields/BusinessDescription__c.field-meta.xml
<CustomField>
    <fullName>BusinessDescription__c</fullName>
    <label>General Nature of the Business</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>