force-app/main/default/objects/BusinessLicenseApplication/fields/BusinessNameDirectoryConsent__c.field-meta.xml
<CustomField>
    <fullName>BusinessNameDirectoryConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Name Directory Consent</label>
    <type>Checkbox</type>
</CustomField>