force-app/main/default/objects/BusinessLicenseApplication/fields/BusinessObjective__c.field-meta.xml
<CustomField>
    <fullName>BusinessObjective__c</fullName>
    <label>Business Objective</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>