force-app/main/default/objects/BusinessLicenseApplication/fields/BusinessPhone__c.field-meta.xml
<CustomField>
    <fullName>BusinessPhone__c</fullName>
    <label>Business Phone</label>
    <type>Phone</type>
</CustomField>