force-app/main/default/objects/BusinessLicenseApplication/fields/Cert_Date__c.field-meta.xml
<CustomField>
    <fullName>Cert_Date__c</fullName>
    <formula>TEXT(MONTH( Certified_Date__c ))&amp;&apos;/&apos;&amp;TEXT(DAY( Certified_Date__c ))&amp;&apos;/&apos;&amp;TEXT(YEAR( Certified_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cert Date</label>
    <type>Text</type>
</CustomField>