force-app/main/default/objects/BusinessLicenseApplication/fields/Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>Certification_Type__c</fullName>
    <label>Certification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Standard (&gt;1 Year)</fullName>
            </value>
            <value>
                <fullName>Standard (&lt;1 Year)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>