force-app/main/default/objects/BusinessLicenseApplication/fields/ClientConfidentialityPolicy__c.field-meta.xml
<CustomField>
    <fullName>ClientConfidentialityPolicy__c</fullName>
    <label>Client Confidentiality Policy</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>