force-app/main/default/objects/BusinessLicenseApplication/fields/CompliesWithAZTrustRules__c.field-meta.xml
<CustomField>
    <fullName>CompliesWithAZTrustRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complies With AZTrustRules</label>
    <type>Checkbox</type>
</CustomField>