force-app/main/default/objects/BusinessLicenseApplication/fields/ConfidentialityProcedures__c.field-meta.xml
<CustomField>
    <fullName>ConfidentialityProcedures__c</fullName>
    <label>Confidentiality Procedures</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>