force-app/main/default/objects/BusinessLicenseApplication/fields/ConflictCheckPolicy__c.field-meta.xml
<CustomField>
    <fullName>ConflictCheckPolicy__c</fullName>
    <label>Conflict Check Policy</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>