force-app/main/default/objects/BusinessLicenseApplication/fields/Counties_Served__c.field-meta.xml
<CustomField>
    <fullName>Counties_Served__c</fullName>
    <label>Counties Served</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Counties</fullName>
            </value>
            <value>
                <fullName>Apache</fullName>
            </value>
            <value>
                <fullName>Cochise</fullName>
            </value>
            <value>
                <fullName>Coconino</fullName>
            </value>
            <value>
                <fullName>Gila</fullName>
            </value>
            <value>
                <fullName>Graham</fullName>
            </value>
            <value>
                <fullName>Greenlee</fullName>
            </value>
            <value>
                <fullName>La Paz</fullName>
            </value>
            <value>
                <fullName>Maricopa</fullName>
            </value>
            <value>
                <fullName>Mohave</fullName>
            </value>
            <value>
                <fullName>Navajo</fullName>
            </value>
            <value>
                <fullName>Pima</fullName>
            </value>
            <value>
                <fullName>Pinal</fullName>
            </value>
            <value>
                <fullName>Santa Cruz</fullName>
            </value>
            <value>
                <fullName>Yavapai</fullName>
            </value>
            <value>
                <fullName>Yuma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>