force-app/main/default/objects/BusinessLicenseApplication/fields/County_Address__c.field-meta.xml
<CustomField>
    <fullName>County_Address__c</fullName>
    <label>County Address</label>
    <type>Address</type>
</CustomField>