force-app/main/default/objects/BusinessLicenseApplication/fields/DBA_Name_2__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name_2__c</fullName>
    <label>DBA Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>