force-app/main/default/objects/BusinessLicenseApplication/fields/DecisionMakingAuthority__c.field-meta.xml
<CustomField>
    <fullName>DecisionMakingAuthority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision-Making Authority for ABS</label>
    <type>Checkbox</type>
</CustomField>