force-app/main/default/objects/BusinessLicenseApplication/fields/Detailed_Business_Experience__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Business_Experience__c</fullName>
    <label>Detailed Business Experience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>