force-app/main/default/objects/BusinessLicenseApplication/fields/DisciplinaryHistory__c.field-meta.xml
<CustomField>
    <fullName>DisciplinaryHistory__c</fullName>
    <label>Disciplinary History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>