force-app/main/default/objects/BusinessLicenseApplication/fields/EconomicInterest10Percent__c.field-meta.xml
<CustomField>
    <fullName>EconomicInterest10Percent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you hold 10% in the ABS?</label>
    <type>Checkbox</type>
</CustomField>