force-app/main/default/objects/BusinessLicenseApplication/fields/EconomicInterest__c.field-meta.xml
<CustomField>
    <fullName>EconomicInterest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Economic Interest 10Plus ABS</label>
    <type>Checkbox</type>
</CustomField>