force-app/main/default/objects/BusinessLicenseApplication/fields/Full_legal_name_of_firm__c.field-meta.xml
<CustomField>
    <fullName>Full_legal_name_of_firm__c</fullName>
    <label>Full legal name of firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>