force-app/main/default/objects/BusinessLicenseApplication/fields/FullDirectoryConsent__c.field-meta.xml
<CustomField>
    <fullName>FullDirectoryConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Directory Consent</label>
    <type>Checkbox</type>
</CustomField>