force-app/main/default/objects/BusinessLicenseApplication/fields/FullSignatureBusinessOwner__c.field-meta.xml
<CustomField>
    <fullName>FullSignatureBusinessOwner__c</fullName>
    <label>Full Signature Business Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>