force-app/main/default/objects/BusinessLicenseApplication/fields/GovernanceAndPolicies__c.field-meta.xml
<CustomField>
    <fullName>GovernanceAndPolicies__c</fullName>
    <label>Governance and Policies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>