force-app/main/default/objects/BusinessLicenseApplication/fields/Has_Pending_Admission__c.field-meta.xml
<CustomField>
    <fullName>Has_Pending_Admission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Pending Admission</label>
    <type>Checkbox</type>
</CustomField>