force-app/main/default/objects/BusinessLicenseApplication/fields/HasAnyBusinessChanges__c.field-meta.xml
<CustomField>
    <fullName>HasAnyBusinessChanges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has any business changes</label>
    <type>Checkbox</type>
</CustomField>