force-app/main/default/objects/BusinessLicenseApplication/fields/HasBankruptcyInvolvement__c.field-meta.xml
<CustomField>
    <fullName>HasBankruptcyInvolvement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bankruptcy Involvement</label>
    <type>Checkbox</type>
</CustomField>