force-app/main/default/objects/BusinessLicenseApplication/fields/HasBeenContactedRegardingComplaint__c.field-meta.xml
<CustomField>
    <fullName>HasBeenContactedRegardingComplaint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacted Regarding Complaint</label>
    <type>Checkbox</type>
</CustomField>