force-app/main/default/objects/BusinessLicenseApplication/fields/HasBeenDefendantOrRespondentInCivilCase__c.field-meta.xml
<CustomField>
    <fullName>HasBeenDefendantOrRespondentInCivilCase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Defendant or Respondent</label>
    <type>Checkbox</type>
</CustomField>