force-app/main/default/objects/BusinessLicenseApplication/fields/HasBeenDishonestOnBusiness__c.field-meta.xml
<CustomField>
    <fullName>HasBeenDishonestOnBusiness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Dishonest on Business</label>
    <type>Checkbox</type>
</CustomField>