force-app/main/default/objects/BusinessLicenseApplication/fields/HasBusinessConductComplaint__c.field-meta.xml
<CustomField>
    <fullName>HasBusinessConductComplaint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Conduct Complaint</label>
    <type>Checkbox</type>
</CustomField>