force-app/main/default/objects/BusinessLicenseApplication/fields/HasCivilCaseInvolvement__c.field-meta.xml
<CustomField>
    <fullName>HasCivilCaseInvolvement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Civil Case Involvement</label>
    <type>Checkbox</type>
</CustomField>