force-app/main/default/objects/BusinessLicenseApplication/fields/HasDecisionMakingAgreements__c.field-meta.xml
<CustomField>
    <fullName>HasDecisionMakingAgreements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision Making Agreements</label>
    <type>Checkbox</type>
</CustomField>