force-app/main/default/objects/BusinessLicenseApplication/fields/HasFailedToDisclose__c.field-meta.xml
<CustomField>
    <fullName>HasFailedToDisclose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Failed To Disclose</label>
    <type>Checkbox</type>
</CustomField>