force-app/main/default/objects/BusinessLicenseApplication/fields/HasFelonyConviction__c.field-meta.xml
<CustomField>
    <fullName>HasFelonyConviction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Felony Conviction</label>
    <type>Checkbox</type>
</CustomField>