force-app/main/default/objects/BusinessLicenseApplication/fields/HasLicenseCensuredAction__c.field-meta.xml
<CustomField>
    <fullName>HasLicenseCensuredAction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Censured Action</label>
    <type>Checkbox</type>
</CustomField>