force-app/main/default/objects/BusinessLicenseApplication/fields/HasMadeFalseStatementToBoard__c.field-meta.xml
<CustomField>
    <fullName>HasMadeFalseStatementToBoard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Made False Statement To Board</label>
    <type>Checkbox</type>
</CustomField>