force-app/main/default/objects/BusinessLicenseApplication/fields/HasMisdemeanorConviction__c.field-meta.xml
<CustomField>
    <fullName>HasMisdemeanorConviction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Misdemeanor Conviction</label>
    <type>Checkbox</type>
</CustomField>