force-app/main/default/objects/BusinessLicenseApplication/fields/HasPendingAuthorityActions__c.field-meta.xml
<CustomField>
    <fullName>HasPendingAuthorityActions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Pending Authority Actions</label>
    <type>Checkbox</type>
</CustomField>