force-app/main/default/objects/BusinessLicenseApplication/fields/HasProbationOrParole__c.field-meta.xml
<CustomField>
    <fullName>HasProbationOrParole__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProbationOrParole</label>
    <type>Checkbox</type>
</CustomField>