force-app/main/default/objects/BusinessLicenseApplication/fields/HasProfessionalLiabilityInsurance__c.field-meta.xml
<CustomField>
    <fullName>HasProfessionalLiabilityInsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Professional Liability Insurance</label>
    <type>Checkbox</type>
</CustomField>