force-app/main/default/objects/BusinessLicenseApplication/fields/Indemnification_Consent__c.field-meta.xml
<CustomField>
    <fullName>Indemnification_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indemnification Consent</label>
    <type>Checkbox</type>
</CustomField>