force-app/main/default/objects/BusinessLicenseApplication/fields/InducementPolicyProcedures__c.field-meta.xml
<CustomField>
    <fullName>InducementPolicyProcedures__c</fullName>
    <label>Inducement Policy Procedures</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>