force-app/main/default/objects/BusinessLicenseApplication/fields/Interest_Statement_Consent__c.field-meta.xml
<CustomField>
    <fullName>Interest_Statement_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest Statement Consent</label>
    <type>Checkbox</type>
</CustomField>