force-app/main/default/objects/BusinessLicenseApplication/fields/Is_Business_Entity_Exemption_requested__c.field-meta.xml
<CustomField>
    <fullName>Is_Business_Entity_Exemption_requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Business Entity Exemption requested?</label>
    <type>Checkbox</type>
</CustomField>