force-app/main/default/objects/BusinessLicenseApplication/fields/Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Expired__c</fullName>
    <formula>NOW() &gt; ADDMONTHS(LastModifiedDate, VALUE(LicenseType.Application_Open_Duration__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>