force-app/main/default/objects/BusinessLicenseApplication/fields/JurisdictionalLicensingInfo__c.field-meta.xml
<CustomField>
    <fullName>JurisdictionalLicensingInfo__c</fullName>
    <label>Jurisdictional LicensingInfo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>