force-app/main/default/objects/BusinessLicenseApplication/fields/JurisdictionOperationDuration__c.field-meta.xml
<CustomField>
    <fullName>JurisdictionOperationDuration__c</fullName>
    <label>Jurisdiction Operation Duration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>