force-app/main/default/objects/BusinessLicenseApplication/fields/LawPracticeJurisdictions__c.field-meta.xml
<CustomField>
    <fullName>LawPracticeJurisdictions__c</fullName>
    <label>Law Practice Jurisdictions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AZ</fullName>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>