force-app/main/default/objects/BusinessLicenseApplication/fields/LegalAuthorityConfirmation__c.field-meta.xml
<CustomField>
    <fullName>LegalAuthorityConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Authority Confirmation</label>
    <type>Checkbox</type>
</CustomField>