force-app/main/default/objects/BusinessLicenseApplication/fields/LegalSupportEntities__c.field-meta.xml
<CustomField>
    <fullName>LegalSupportEntities__c</fullName>
    <label>Legal Support Entities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>