force-app/main/default/objects/BusinessLicenseApplication/fields/NonLegalActivities__c.field-meta.xml
<CustomField>
    <fullName>NonLegalActivities__c</fullName>
    <label>Non-Legal Activities</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>