force-app/main/default/objects/BusinessLicenseApplication/fields/ProfitBeneficiaries__c.field-meta.xml
<CustomField>
    <fullName>ProfitBeneficiaries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profit Beneficiaries</label>
    <type>Checkbox</type>
</CustomField>