force-app/main/default/objects/BusinessLicenseApplication/fields/Public_Directory_Address__c.field-meta.xml
<CustomField>
    <fullName>Public_Directory_Address__c</fullName>
    <label>Public Directory Address</label>
    <type>Address</type>
</CustomField>