force-app/main/default/objects/BusinessLicenseApplication/fields/Public_Directory_Name_Consent__c.field-meta.xml
<CustomField>
    <fullName>Public_Directory_Name_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Directory Name only Consent</label>
    <type>Checkbox</type>
</CustomField>