force-app/main/default/objects/BusinessLicenseApplication/fields/Reason_Not_Incorporated__c.field-meta.xml
<CustomField>
    <fullName>Reason_Not_Incorporated__c</fullName>
    <label>Reason Not Incorporated</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>