force-app/main/default/objects/BusinessLicenseApplication/fields/RegisterwithArizona__c.field-meta.xml
<CustomField>
    <fullName>RegisterwithArizona__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Register with Arizona</label>
    <type>Checkbox</type>
</CustomField>