force-app/main/default/objects/BusinessLicenseApplication/fields/Renewal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Reason__c</fullName>
    <label>Renewal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABS Renewal</fullName>
                <label>Request for Renewal License of ABS</label>
            </value>
            <value>
                <fullName>Inactive ABS Renewal</fullName>
                <label>Request for Renewal License of INACTIVE ABS</label>
            </value>
            <value>
                <fullName>Suspended ABS Renewal</fullName>
                <label>Request for Renewal License of SUSPENDED ABS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>