force-app/main/default/objects/BusinessLicenseApplication/fields/Reporting_Firm_Email__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Firm_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>