force-app/main/default/objects/BusinessLicenseApplication/fields/Reporting_Firm_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Firm_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>