force-app/main/default/objects/BusinessLicenseApplication/fields/SharesResourcesWithOthers__c.field-meta.xml
<CustomField>
    <fullName>SharesResourcesWithOthers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shares Resources With Others</label>
    <type>Checkbox</type>
</CustomField>